mute button z-index fixed

--- a/global.css
+++ b/global.css
@@ -328,7 +328,7 @@ align-items: center;
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 2;
+    /* z-index: 2; */
     font-size: 25px;
     color: white;
     background-color: #000000;
